# image-bg-remover

./: .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES.txt  image_bg_remover.spec  main.py  pyproject.toml
.codex/environments/: environment.toml
doc/: README_en.md
licenses/: Qt-for-Python-NOTICE.txt  README.txt
scripts/: build_windows.ps1
src/image_bg_remover/: __init__.py  __main__.py  app.py  config.py  inference.py  inference_server.py  logging_utils.py  masking.py  model_download.py  paths.py  state.py
src/image_bg_remover.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/image_bg_remover/ui/: __init__.py  help_dialog.py  image_preview.py  main_window.py  model_management.py  theme.py
