[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "image-bg-remover"
dynamic = ["version"]
description = "Windows desktop app for background removal with SAM2.1."
readme = "spec.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.10,<7",
    "numpy>=2.4.3,<3",
    "hydra-core>=1.3,<2",
    "iopath>=0.1.10,<1",
    "torch>=2.10,<3",
    "torchvision>=0.25,<1",
    "sam2 @ git+https://github.com/facebookresearch/sam2.git",
]

[project.optional-dependencies]
build = [
    "PyInstaller>=6.19,<7",
]

[project.scripts]
image-bg-remover = "image_bg_remover.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "image_bg_remover.__version__"}
